[FIX] knowledge: prevent comments menu overlap on small screens
Steps to reproduce:
1. Open Knowledge
2. Select any text in an article
3. The menu will show
4. Click on comments
5. Write a log and shrink the screen
6. The comments menu breaks
7. The display of comments is a little bit odd

Removed 'flex-wrap' from the message header's CSS to prevent the menu from
overlapping when the screen size is reduced. This ensures a consistent layout
and better user experience on smaller screens.

Task-4063810

closes odoo/enterprise#69291

X-original-commit: 21ec4385c382e90a8c9cee45de3d77fb14124f63

--- a/knowledge/static/src/components/comment/comment.scss
+++ b/knowledge/static/src/components/comment/comment.scss
@@ -52,3 +52,9 @@
     max-height: 50vh;
     z-index: 1000;
 }
+
+@media screen and (max-width: 1700px) {
+    .o_knowledge_comments_popover .o-mail-Message-header {
+      flex-wrap: nowrap !important;
+    }
+  }
